cmake_minimum_required (VERSION 2.6)
project (MapReduce)
set(OUTPUT_BIN MapReduce)
include_directories(${PROJECT_SOURCE_DIR}/third_party/boost)
link_directories(${PROJECT_SOURCE_DIR}/third_party/boost/build)
add_executable(${OUTPUT_BIN} src/main.cc)
target_link_libraries(${OUTPUT_BIN} boost_thread boost_system)
