cmake_minimum_required (VERSION 2.6)
project (MapReduce)
set(OUTPUT_BIN MapReduce)
set(CMAKE_CXX_FLAGS "-std=c++0x")
include_directories(${PROJECT_SOURCE_DIR}/third_party/boost)
link_directories(${PROJECT_SOURCE_DIR}/third_party/boost/build)
file(GLOB SOURCES "src/*.c*")
add_executable(${OUTPUT_BIN} ${SOURCES})
target_link_libraries(${OUTPUT_BIN} boost_thread boost_system)
